k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ardent-webhook-ingress
  # namespace: retell-webhooks
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - your-domain.com
  #     secretName: retell-webhook-tls
  rules:
    - host: ardnt.io
      http:
        paths:
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: webhook-service
                port:
                  number: 80
